--- a/static/style/layouts/540p.css
+++ b/static/style/layouts/540p.css
@@ -70,7 +70,7 @@
 
 #carouselComponent > .carouselmask.vertical {
     height: 450px;
-    width: 264px
+    width: 450px
 }
 
 #carouselComponent > .description {
